tests/miniJava/pos/001280_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( 0 . length ) if ( 0 ) { } else { } } }
