tests/miniJava/neg/005825_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { length if ( 0 ) { } else { } } }
